--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 filetime = "0.2.5"
 walkdir = "^2.0.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
